@@ -101,6 +101,7 @@ xx/xx/xx
 * Prevented crash when opening a HEIF image with a jpeg extension (#1478)
 * Fixed crash at startup on macOS when no ~/Pictures folder is found (#1486)
 * Fixed loss of metadata when Siril uses preview (#1491)
+* Fixed handling NaNs in float statistics (#1487)
 
 **Misc:**
 * Removed glib-networking as a dependency (#1157)
